--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,4 +57,5 @@ dependencies {
     testImplementation 'junit:junit:4.12'
 
     implementation project(":JokeTellingLib")
+    implementation project(":showjokeandroidlib")
 }
