--- a/local.properties
+++ b/local.properties
@@ -6,3 +6,6 @@
 # header note.
 #Mon Nov 25 14:31:46 IST 2019
 sdk.dir=/Users/praveen/Library/Android/sdk
+
+APP_ID_AD=ca-app-pub-8512485400513111~7022998721
+
