--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -23,6 +23,8 @@ apply plugin: 'com.google.cloud.tools.endpoints-framework-server'
 sourceCompatibility = JavaVersion.VERSION_1_7
 targetCompatibility = JavaVersion.VERSION_1_7
 
+appengine.tools.cloudSdkHome="/Users/praveen/Documents/ANDROIDWORK/google-cloud/google-cloud-sdk/"
+
 dependencies {
     implementation 'com.google.endpoints:endpoints-framework:2.0.9'
     implementation 'javax.inject:javax.inject:1'
@@ -30,4 +32,6 @@ dependencies {
     implementation 'javax.servlet:servlet-api:2.5'
     implementation 'com.google.api-client:google-api-client:1.23.0'
     implementation 'com.google.http-client:google-http-client-android:1.23.0'
+
+    implementation project(":JokeTellingLib")
 }
