--- a/app/src/free/AndroidManifest.xml
+++ b/app/src/free/AndroidManifest.xml
@@ -13,9 +13,18 @@
         tools:targetApi="m">
         <!--This meta-data tag is required to use Google Play Services.-->
         <meta-data
-            tools:node="replace"
             android:name="com.google.android.gms.version"
-            android:value="" />
+            android:value="@integer/google_play_services_version" />
+
+        <!--Include the AdActivity configChanges and theme. -->
+        <activity
+            android:name="com.google.android.gms.ads.AdActivity"
+            android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|uiMode|screenSize|smallestScreenSize"
+            android:theme="@android:style/Theme.Translucent" />
+
+        <meta-data
+            android:name="com.google.android.gms.ads.APPLICATION_ID"
+            android:value="ca-app-pub-8512485400513111~7022998721"/>
     </application>
 
 </manifest>
